tests/ui/failure-from-include-2.goml
include: "auxiliary/utils2.goml"
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"

call-function: ("fail-2", {}) //~ ERROR: Unknown document property
